# etherbeing.github.io

./: .env.development.secret  .env.oauth.secret  .env.postgres.secret  .env.production.secret  .env.redis.secret  .env.s3.secret  .env.secret  .gitignore  Cargo.toml  LICENSE  README.md  TODO  TODO.md  _config.yml  astro.config.mjs  components.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_live.sh  start.sh  startup.py
api/: .dockerignore  .env  .env.production.secret  .env.secret  .gitignore  .python-version  Cargo.toml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/.sqlx/: query-039166f8eb5af3373bc003aa4a55c6b00eec590e552e999d6e0aa3bca5e10172.json  query-046756c4af5b695f70750a8a6013a90795590106b0a699807aab9171b235a511.json
api/migrations/: 20250823063403_initial.sql  20250823070332_message.sql  20250828000503_make-password-optional.sql  20250828034116_expand-date-fields.sql  20250830221357_add-contacts-posts-table.sql  20250830224700_make-created-at-not-null.sql  20250830232528_phone-by-country.sql  20250912000144_add_table_public_about_me.sql  20250912202944_table_portfolio_items.sql
api/scripts/: prepare_db_schema.py  pyproject.toml
api/src/: lib.rs  main.rs
api/src/apps/: mod.rs
api/src/apps/blog/: controllers.rs  models.rs
api/src/apps/demo_app/: consumers.rs  mod.rs
api/src/apps/demo_app/graphql/: mod.rs  queries.rs
api/src/apps/general/: consumers.rs  mod.rs
api/src/apps/general/controllers/: about_me.rs  contacts.rs  mod.rs  portfolio.rs
api/src/apps/general/models/: about_me.rs  clients.rs  contacts.rs  mod.rs  portfolio.rs  services.rs  skills.rs  testimonial.rs
api/src/apps/general/serializers/: client.rs  contacts.rs  mod.rs  portfolio.rs
api/src/apps/security/: controllers.rs  mod.rs  models.rs  serializers.rs
api/src/apps/security/utils/: jwt.rs  mod.rs
api/src/consumers/: demo.rs  mod.rs
api/src/controllers/: base.rs  mod.rs
api/src/core/: mod.rs
api/src/core/settings/: graphql.rs  mod.rs  swagger.rs
api/src/data/: README.md
api/src/etherbeing/: asgi.py  manage.py  settings.py  urls.py
api/src/etherbeing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/etherbeing/apps/base/: apps.py  controllers.py  models.py  serializers.py
api/src/etherbeing/etherbeing/: settings.py  urls.py  wsgi.py
api/src/network/: README.md
api/src/network/websocket/: base.rs
api/src/presentation/: README.md  mod.rs
api/src/presentation/controllers/: mod.rs  websocket.rs
api/src/presentation/controllers/data/: base.rs  graphql.rs  mod.rs
api/src/presentation/serializers/: handler.rs  mod.rs  swagger.rs
assets/: animate.min-g47ojTEA.css  (+21 more)
high_performance/shaders/liquid-ether/: Cargo.toml  compile.sh  configure.sh
high_performance/shaders/liquid-ether/src/: gpu.rs
(+156 files in other folders)
