[package]
name = "cv_etherbeing"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
argon2 = "0.5.3"
async-graphql = { version = "7.0.17", features = ["playground"] }
async-graphql-actix-web = "7.0.17"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
s3 = "0.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "url"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
