[package]
name = "liquid-ether"
version = "0.1.0"
edition = "2018"
resolver = "3"
description = "High performance background animation for etherbeing's website"
authors = ["Esteban Chacon Martin"]
license = "Apache-2.0"
repository = "https://github/etherbeing/etherbeing.github.io"
publish = false


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.7", optional = true}
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
wasm-bindgen-test = "0.3.56"
web-sys = { version = "0.3.83", features = ["HtmlCanvasElement", "Window", "Document", "CanvasRenderingContext2d", "Element", "ImageData"] }
wgpu = "27.0.1"
